--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "css-loader": "^0.23.1",
+    "html-loader": "^0.4.3",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "vue": "^1.0.26"
   }
 }
